--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -1,11 +1,7 @@
 FROM node:16.14-alpine
-
 WORKDIR /app-backend
-
-COPY package.json .
-
-RUN npm install
-
+EXPOSE 3001
 COPY . .
-
-CMD [ "npm", "run", "dev" ]
+RUN npm install
+RUN npm run build
+CMD [ "npm", "start" ]
