--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -1,11 +1,6 @@
 FROM node:16.14-alpine
-
 WORKDIR /app-frontend
-
-COPY package.json .
-
-RUN npm install
-
+EXPOSE 3000
 COPY . .
-
+RUN npm install
 CMD [ "npm", "start" ]
